syntax = "proto3";

package sonrio.sonr.schema;

option go_package = "github.com/sonr-io/sonr/x/schema/types";
option java_multiple_files = true;
option java_package = "io.sonr.types.schema";

enum LinkKind {
  UNKNOWN = 0;
  OBJECT = 1;
  SCHEMA = 2;
  BUCKET = 3;
}

enum SchemaKind {
  LIST = 0;
  BOOL = 1;
  INT = 2;
  FLOAT = 3;
  STRING = 4;
  BYTES = 5;
  LINK = 6;
  MAP = 7;
}

message MetadataDefintion {
  // key of the metadata
  string key = 1;

  // metadata
  string value = 2;
}

message SchemaKindDefinition {
  string name = 1;
  // Type of a single schema property
  SchemaKind field = 2;

  // Optional field for a link context if `SchemaKind` is of type `Link`
  LinkKind link_kind = 3;

  string link = 4;
}

message SchemaDefinition {
  // the DID for this schema should not be populated by request
  string did = 1;

  string creator = 2;

  // an alternative reference point
  string label = 3;

  // the properties of this schema
  repeated SchemaKindDefinition fields = 4;
}
